<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="16dp"
    android:background="@color/design_default_color_primary_dark">

    <TextView
        android:id="@+id/loginTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/class_scheduler"
        android:textSize="24sp"
        android:textStyle="bold"
        android:textColor="@android:color/black"
        android:layout_marginBottom="24dp" />

    <EditText
        android:id="@+id/emailInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:hint="@string/email_adress"
        android:inputType="textEmailAddress"
        android:padding="10dp"
        android:background="@drawable/input_background"
        android:layout_marginBottom="16dp" />

    <EditText
        android:id="@+id/passwordInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:padding="10dp"
        android:background="@drawable/input_background"
        android:layout_marginBottom="24dp" />
    <Button
        android:id="@+id/loginButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:backgroundTint="@color/teal_700"
        android:textColor="@android:color/white"
        android:layout_marginBottom="16dp" />


    <TextView
        android:id="@+id/registerLink"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/don_t_have_an_account_register_here"
        android:textSize="14sp"
        android:textColor="@color/blue"
        android:gravity="center"
        android:layout_marginTop="8dp"
        android:clickable="true"
        android:focusable="true" />


</LinearLayout>
